--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -268,7 +268,7 @@ outputs:
         - numpy >=1.26.4 # loosen bounds to accept numpy 2, which appears to be compatible
         - sentencepiece >=0.1.98,<=0.2.0
         - transformers >=4.51.3,<5.0.0
-        - protobuf >=4.21.0,<5.0.0
+        - protobuf >=4.21.0,<6.0.0 # loosen bounds to accept protobuf 5
         # requirements/requirements-convert_hf_to_gguf.txt
         # requirements/requirements-convert_llama_ggml_to_gguf.txt
         # requirements/requirements-convert_lora_to_gguf.txt
