--- a/abs.yaml
+++ b/abs.yaml
@@ -1,2 +1,6 @@
+# disable CUDA build by default - not yet supported on PBP
+build_env_vars:
+  ANACONDA_ROCKET_ENABLE_CUDA: 0
+
 channels:
   - https://staging.continuum.io/pbp/fs/sentencepiece-feedstock/pr9/21ae2c4
