--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,9 +23,7 @@ source:
     - patches/fix-models-path.patch
 
 build:
-  # build with --variants "{enable_cuda: True}" to enable CUDA
-  skip: true # [not enable_cuda and (gpu_variant or "").startswith('cuda')]
-  number: {{ build_number }} # trigger
+  number: {{ build_number }}
 
 outputs:
   - name: libllama
@@ -36,9 +34,8 @@ outputs:
     build:
       script_env:
         - LLAMA_BUILD_NUMBER={{ upstream_release[1:] }}
-        - LLAMA_BUILD_COMMIT={{ upstream_commit}}  
-      # build with --variants "{enable_cuda: True}" to enable CUDA
-      skip: true # [not enable_cuda and (gpu_variant or "").startswith('cuda')]
+        - LLAMA_BUILD_COMMIT={{ upstream_commit}}
+      skip: true # [output_set != "llama"]
       # do not mix cublas and mkl/openblas
       skip: true # [((gpu_variant or "").startswith('cuda') and (blas_impl != "cublas")) or (not (gpu_variant or "").startswith('cuda') and (blas_impl == "cublas"))]
       # Use a build number difference to ensure that the GPU
@@ -72,7 +69,7 @@ outputs:
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp 17.0.6                                  # [osx]
-        - libcurl {{ libcurl }}
+        - libcurl 
       run:
         - {{ pin_compatible('cuda-version', max_pin='x.x') }} # [(gpu_variant or "").startswith('cuda')]
         - {{ pin_compatible('intel-openmp') }}                # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
@@ -108,9 +105,8 @@ outputs:
     build:
       script_env:
         - LLAMA_BUILD_NUMBER={{ upstream_release[1:] }}
-        - LLAMA_BUILD_COMMIT={{ upstream_commit}}  
-      # build with --variants "{enable_cuda: True}" to enable CUDA
-      skip: true # [not enable_cuda and (gpu_variant or "").startswith('cuda')]
+        - LLAMA_BUILD_COMMIT={{ upstream_commit}}
+      skip: true # [output_set != "llama"]
       # do not mix cublas and mkl/openblas
       skip: true # [((gpu_variant or "").startswith('cuda') and (blas_impl != "cublas")) or (not (gpu_variant or "").startswith('cuda') and (blas_impl == "cublas"))]
       # Use a build number difference to ensure that the GPU
@@ -144,7 +140,7 @@ outputs:
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp 17.0.6                                  # [osx]
-        - libcurl {{ libcurl }}
+        - libcurl 
         - {{ pin_subpackage('libllama', exact=True) }}
       run:
         - {{ pin_subpackage('libllama', exact=True) }}
@@ -182,9 +178,8 @@ outputs:
     build:
       script_env:
         - LLAMA_BUILD_NUMBER={{ upstream_release[1:] }}
-        - LLAMA_BUILD_COMMIT={{ upstream_commit}}  
-      # build with --variants "{enable_cuda: True}" to enable CUDA
-      skip: true # [not enable_cuda and (gpu_variant or "").startswith('cuda')]
+        - LLAMA_BUILD_COMMIT={{ upstream_commit}}
+      skip: true # [output_set != "llama"] 
       # do not mix cublas and mkl/openblas
       skip: true # [((gpu_variant or "").startswith('cuda') and (blas_impl != "cublas")) or (not (gpu_variant or "").startswith('cuda') and (blas_impl == "cublas"))]
       # Use a build number difference to ensure that the GPU
@@ -215,7 +210,7 @@ outputs:
         - openblas-devel {{ openblas }}                       # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "openblas"]
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
-        - libcurl {{ libcurl }}
+        - libcurl 
         - {{ pin_subpackage('libllama', exact=True) }}
         - {{ pin_subpackage('llama.cpp', exact=True) }}
       run:
@@ -253,6 +248,7 @@ outputs:
         - llama-convert-llama-ggml-to-gguf = llama_cpp_tools.convert_llama_ggml_to_gguf:main
         - llama-convert-lora-to-gguf = llama_cpp_tools.convert_lora_to_gguf:main
       skip: True # [py<39]
+      skip: true # [output_set != "llama_cpp_tools"]
       number: {{ build_number }}
 
     requirements:
@@ -315,8 +311,9 @@ outputs:
         - gguf-dump = gguf.scripts.gguf_dump:main
         - gguf-set-metadata = gguf.scripts.gguf_set_metadata:main
         - gguf-new-metadata = gguf.scripts.gguf_new_metadata:main
-        - gguf-editor-gui = gguf.scripts.gguf_editor_gui:main
+        - gguf-editor-gui = gguf.scripts.gguf_editor_gui:main      
       skip: True # [py<39]
+      skip: true # [output_set != "llama_cpp_tools"]
       number: {{ build_number }}
 
     requirements:
