--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -5,6 +5,18 @@
 {% set gguf_version = "0.17.1." + upstream_release[1:] %}
 {% set build_number = 0 %}
 
+# When output_set is llama_cpp_tools, PBP trips on undefined variables
+# because they are not part of the variant config.
+# So we set them to -1 to avoid the render error.
+# Setting to -1 is safe because if they ever get used in the build, they
+# will generate a solve error.
+{% if output_set == "llama_cpp_tools" %}
+{% set libcurl = "-1" %}
+{% set mkl = "-1" %}
+{% set openblas = "-1" %}
+{% set cuda_compiler_version = "-1" %}
+{% endif %}
+
 package:
   name: {{ name|lower }}
   version: {{ version }}
@@ -69,7 +81,7 @@ outputs:
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp 17.0.6                                  # [osx]
-        - libcurl 
+        - libcurl {{ libcurl }}
       run:
         - {{ pin_compatible('cuda-version', max_pin='x.x') }} # [(gpu_variant or "").startswith('cuda')]
         - {{ pin_compatible('intel-openmp') }}                # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
@@ -140,7 +152,7 @@ outputs:
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp 17.0.6                                  # [osx]
-        - libcurl 
+        - libcurl {{ libcurl }}
         - {{ pin_subpackage('libllama', exact=True) }}
       run:
         - {{ pin_subpackage('libllama', exact=True) }}
@@ -210,7 +222,7 @@ outputs:
         - openblas-devel {{ openblas }}                       # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "openblas"]
         - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
-        - libcurl 
+        - libcurl {{ libcurl }}
         - {{ pin_subpackage('libllama', exact=True) }}
         - {{ pin_subpackage('llama.cpp', exact=True) }}
       run:
