--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -87,6 +87,8 @@ outputs:
         - {{ pin_compatible('intel-openmp') }}                # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp                                         # [osx] bounds through run_exports
         - _openmp_mutex                                       # [linux]
+        - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
+        - __cuda                                              # [(gpu_variant or "").startswith('cuda')]
         - libcurl # bounds through run_exports
 
     test:
@@ -160,6 +162,8 @@ outputs:
         - {{ pin_compatible('intel-openmp') }}                # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - llvm-openmp                                         # [osx] bounds through run_exports
         - _openmp_mutex                                       # [linux]
+        - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
+        - __cuda                                              # [(gpu_variant or "").startswith('cuda')]
         - libcurl # bounds through run_exports
 
     test:
@@ -231,6 +235,8 @@ outputs:
         - {{ pin_compatible('cuda-version', max_pin='x.x') }} # [(gpu_variant or "").startswith('cuda')]
         - {{ pin_compatible('intel-openmp') }}                # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
         - _openmp_mutex                                       # [linux]
+        - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
+        - __cuda                                              # [(gpu_variant or "").startswith('cuda')]
         - libcurl # bounds through run_exports
 
     test:
