--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -24,6 +24,15 @@ gpu_variant:
   - metal                      # [osx]
   - cuda-12                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
 
+# metal builds now require the MTLBuffer gpuAddress property, introduced in macOS 13.0
+c_stdlib_version:              # [osx]
+  - 12.1                       # [osx]
+  - 13.1                       # [osx]
+zip_keys:                      # [osx]
+  -                            # [osx]
+    - gpu_variant              # [osx]
+    - c_stdlib_version         # [osx]
+
 cuda_compiler_version:         # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
   - none                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
   - 12.4                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
