--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -25,13 +25,10 @@ gpu_variant:
   - cuda-12                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
 
 # metal builds now require the MTLBuffer gpuAddress property, introduced in macOS 13.0
-c_stdlib_version:              # [osx]
-  - 12.1                       # [osx]
-  - 13.1                       # [osx]
-zip_keys:                      # [osx]
-  -                            # [osx]
-    - gpu_variant              # [osx]
-    - c_stdlib_version         # [osx]
+# metal builds now require the MTLDataType.bfloat4 data type, introduced in macOS 14.0
+# This allows us to build with the latest SDK while still supporting older macOS versions.
+OSX_SDK_VER:                   # [osx]
+  - 14.5                       # [osx]
 
 cuda_compiler_version:         # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
   - none                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
