--- a/abs.yaml
+++ b/abs.yaml
@@ -1,3 +1,12 @@
 # enable CUDA build - not yet supported on PBP
 # build_env_vars:
 #  ANACONDA_ROCKET_ENABLE_CUDA: 1
+
+# How to build on dev instance:
+# Follow: https://github.com/anaconda/perseverance-skills/blob/main/sections/05_Tools/Accessing_dev_machine_instances.md#cuda-builds
+# On linux:
+# > export ANACONDA_ROCKET_ENABLE_CUDA=1
+# > conda build --error-overlinking --croot=cr llama.cpp-feedstock/ --variants "{output_set: llama, gpu_variant: cuda-12, cuda_compiler_version: 12.4}" 2>&1 | tee ./llama.cpp.log
+# On windows:
+# > $env:ANACONDA_ROCKET_ENABLE_CUDA=1
+# > conda build --error-overlinking --croot=cr .\llama.cpp-feedstock\  --variants "{output_set: llama, gpu_variant: cuda-12, cuda_compiler_version: 12.4}"  2>&1 | Tee-Object -FilePath ./llama.cpp.log
