--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,8 +60,8 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"                                                                           # [(gpu_variant or "").startswith('cuda') and linux]
-        - "**/nvcuda.dll"                                                                            # [(gpu_variant or "").startswith('cuda') and win]
+        - "**/libcuda.so*"
+        - "**/nvcuda.dll"
       run_exports:
         - {{ pin_subpackage('libllama', exact=True) }}
 
@@ -134,8 +134,8 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"                                                                           # [(gpu_variant or "").startswith('cuda') and linux]
-        - "**/nvcuda.dll"                                                                            # [(gpu_variant or "").startswith('cuda') and win]
+        - "**/libcuda.so*"
+        - "**/nvcuda.dll"
       run_exports:
         - {{ pin_subpackage('llama.cpp', exact=True) }}
       
@@ -210,8 +210,8 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"                                                                           # [(gpu_variant or "").startswith('cuda') and linux]
-        - "**/nvcuda.dll"                                                                            # [(gpu_variant or "").startswith('cuda') and win]
+        - "**/libcuda.so*"
+        - "**/nvcuda.dll"
       
     requirements:
       build:
