resolve PR comment to match missing_dso_whitelist

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,8 +60,8 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"
-        - "**/nvcuda.dll"
+        - "**/libcuda.so*"  # [(gpu_variant or "").startswith('cuda')]
+        - "**/nvcuda.dll"   # [(gpu_variant or "").startswith('cuda')]
       run_exports:
         - {{ pin_subpackage('libllama', exact=True) }}
 
@@ -134,8 +134,8 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"
-        - "**/nvcuda.dll"
+        - "**/libcuda.so*"  # [(gpu_variant or "").startswith('cuda')]
+        - "**/nvcuda.dll"   # [(gpu_variant or "").startswith('cuda')]
       run_exports:
         - {{ pin_subpackage('llama.cpp', exact=True) }}
       
@@ -210,9 +210,9 @@ outputs:
       string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none"]
       string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
       missing_dso_whitelist:                                                                         # [(gpu_variant or "").startswith('cuda')]
-        - "**/libcuda.so*"
-        - "**/nvcuda.dll"
-      
+        - "**/libcuda.so*"  # [(gpu_variant or "").startswith('cuda')]
+        - "**/nvcuda.dll"   # [(gpu_variant or "").startswith('cuda')]
+
     requirements:
       build:
         - {{ stdlib('c')}}
