libcurl fix for cuda

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,6 +6,9 @@ output_set:
   - llama
   - llama_cpp_tools
 
+libcurl:
+  - 8
+
 c_compiler:        # [win]
   - vs2022         # [win]
 c_stdlib_version:  # [win]
