--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,7 +4,7 @@
 # This helps us avoid mixing the two sets of packages in the same build on PBP.
 output_set:
   - llama
-  - llama_cpp_tools
+  #- llama_cpp_tools
 
 libcurl:
   - 8
@@ -27,12 +27,12 @@ blas_impl:
   - mkl                        # [win or (linux and x86_64)]
   - openblas                   # [linux]
   - accelerate                 # [osx]
-  - cublas                     # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+  - cublas                     # [win or (linux and x86_64)]
 
 gpu_variant:
   - none
   - metal                      # [osx]
-  - cuda-12                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+  - cuda-12                    # [win or (linux and x86_64)]
 
 # metal builds now require the MTLBuffer gpuAddress property, introduced in macOS 13.0
 # metal builds now require the MTLDataType.bfloat4 data type, introduced in macOS 14.0
@@ -40,14 +40,14 @@ gpu_variant:
 OSX_SDK_VER:                   # [osx]
   - 14.5                       # [osx]
 
-cuda_compiler_version:         # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  - none                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  - 12.4                       # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+cuda_compiler_version:         # [win or (linux and x86_64)]
+  - none                       # [win or (linux and x86_64)]
+  - 12.4                       # [win or (linux and x86_64)]
 
-cuda_compiler:                 # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-- cuda-nvcc                    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+cuda_compiler:                 # [win or (linux and x86_64)]
+- cuda-nvcc                    # [win or (linux and x86_64)]
 
-zip_keys:                      # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-  -                            # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-    - gpu_variant              # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
-    - cuda_compiler_version    # [ANACONDA_ROCKET_ENABLE_CUDA and (win or (linux and x86_64))]
+zip_keys:                      # [win or (linux and x86_64)]
+  -                            # [win or (linux and x86_64)]
+    - gpu_variant              # [win or (linux and x86_64)]
+    - cuda_compiler_version    # [win or (linux and x86_64)]
