--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "llama.cpp-meta" %}
-{% set upstream_release = "b6082" %}
-{% set upstream_commit = "5aa1105da24a8dd1661cea3db0582c9b2c2f54d3" %}
+{% set upstream_release = "b6188" %}
+{% set upstream_commit = "21c17b5befc5f6be5992bc87fc1ba99d388561df" %}
 {% set version = "0.0." + upstream_release[1:] %}
 {% set gguf_version = "0.17.1." + upstream_release[1:] %}
 {% set build_number = 0 %}
@@ -11,14 +11,18 @@ package:
 
 source:
   url: https://github.com/ggml-org/llama.cpp/archive/{{ upstream_release }}.tar.gz
-  sha256: f961d6a9525133991a0b86cce8e33671cac6b028d51f8d22ce2370b526f4c6c2
+  sha256: aba3d07942daa048d46cc7fddebc33d839e89e256306428910dcd582597c0b97
 
   patches:
     - patches/mkl.patch                     # [blas_impl == "mkl"]
     - patches/metal_gpu_selection.patch     # [osx]
     - patches/hwcap_sve_check.patch         # [linux and aarch64]
     - patches/no-armv9-support-gcc11.patch  # [linux and aarch64]
+    - patches/increase-nmse-tolerance.patch
+    - patches/increase-nmse-tolerance-aarch64.patch  # [linux and aarch64]
     - patches/fix-convert_lora_to_gguf.patch
+    - patches/fix-models-path.patch
+    - patches/fix-test-opt-cpu-backend.patch
 
 build:
   skip: true # [skip_cuda_prefect and (gpu_variant or "").startswith('cuda')]
