--- a/abs.yaml
+++ b/abs.yaml
@@ -3,7 +3,7 @@ build_parameters:
   - "--suppress-variables"
   - "--skip-existing"
   - "--error-overlinking"
-  - "--variants \"{skip_cuda_prefect: True}\""
+  # - "--variants \"{skip_cuda_prefect: True}\""  # Not supported in PBP
 
 # Required for glibc >= 2.28
 pkg_build_image_tag: main-rockylinux-8
