Fix Windows c_stdlib_version in conda_build_config.yaml

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -16,7 +16,7 @@ c_stdlib:
 c_stdlib_version:
   - 2.28                           # [linux]
   - 12.1                           # [osx]
-  - 2022.14                        # [win]
+  - "2022"                         # [win]
 
 c_compiler:                        # [win]
   - vs2022                         # [win]
