Fix Windows CUDA build configuration and skip flaky test

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -12,11 +12,12 @@ libcurl:
 c_stdlib:
   - sysroot                        # [linux]
   - macosx_deployment_target       # [osx]
+  - vs                             # [win]
 
 c_stdlib_version:
   - 2.28                           # [linux]
   - 12.1                           # [osx]
-  - "2022"                         # [win]
+  - 2022.14                        # [win]
 
 c_compiler:                        # [win]
   - vs2022                         # [win]
