Remove unnecessary patches for b7223
- Remove increase-nmse-tolerance.patch (not needed - we skip test-backend-ops)
- Remove increase-nmse-tolerance-aarch64.patch (same reason)
- Comment out Metal patches for re-evaluation (may be fixed upstream)

All remaining 6 patches apply cleanly to b7223:
- mkl.patch
- metal_gpu_selection.patch
- hwcap_sve_check.patch
- no-armv9-support-gcc11.patch
- fix-convert_lora_to_gguf.patch
- fix-models-path.patch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,14 +27,13 @@ source:
   patches:
     - patches/mkl.patch                     # [blas_impl == "mkl"]
     - patches/metal_gpu_selection.patch     # [osx]
-    - patches/disable-metal-bf16.patch      # [osx]
-    - patches/disable-metal-flash-attention.patch  # [osx]
     - patches/hwcap_sve_check.patch         # [linux and aarch64]
     - patches/no-armv9-support-gcc11.patch  # [linux and aarch64]
-    - patches/increase-nmse-tolerance.patch
-    - patches/increase-nmse-tolerance-aarch64.patch  # [linux and aarch64]
     - patches/fix-convert_lora_to_gguf.patch
     - patches/fix-models-path.patch
+    # TODO: Re-evaluate Metal patches for b7223 - may not be needed if upstream fixed
+    # - patches/disable-metal-bf16.patch      # [osx]
+    # - patches/disable-metal-flash-attention.patch  # [osx]
 
 build:
   number: {{ build_number }}
