Add zstd build dependency for OSX
Fix OSX build failure where ctest crashes with "Abort trap: 6" due to
missing libzstd.1.dylib. The cmake package's ctest binary requires
libzstd at runtime on macOS.

Error was:
  dyld: Library not loaded: @rpath/libzstd.1.dylib
  Referenced from: .../cmake-4.1.2-hdb7c5fe_0/bin/ctest

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,6 +76,7 @@ outputs:
         - cmake
         - ninja-base
         - pkgconfig
+        - zstd                                                # [osx] cmake's ctest needs libzstd at runtime
       host:
         - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
         - cuda-cudart-dev  {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
