--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -4,6 +4,7 @@
 {% set version = "0.0." + upstream_release[1:] %}
 {% set gguf_version = "0.17.1." + upstream_release[1:] %}
 {% set build_number = 0 %}
+# re-trigger CI
 
 # When output_set is llama_cpp_tools, PBP trips on undefined variables
 # because they are not part of the variant config.
